--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "express": "4.18.2",
+    "multiparty": "4.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.20"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/LLazyEmail/nmtg-email-editor.git"
